--- a/src/topic/c_1.html
+++ b/src/topic/c_1.html
@@ -254,6 +254,91 @@
             </li>
         </ul>
     </div>
+    <div class="list-content">
+        <div class="w clearfix">
+            <div class="fl topWrapper" id="tplWrapper">
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href=".../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <!-- <div class="readyMore topList">
+                    <a href="./list/list.html">查看更多</a>
+                </div> -->
+            </div>
+            <div class="fr adList">
+                <ul>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                </ul>
+            </div>
+            
+        </div>
+
+
+    </div>
+    
 </body>
 <script src="../../assets/lib/jquery/jquery.js"></script>
 <script src="../../assets/js/util.js"></script>
