一级分类，二级分类，文章的跳转完成，交互效果完成

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                     <li class="line"></li>
                     <li>
 
-                        <a href="javascript:;">笔记本</a>
+                        <a href="./topic/p_1.html">笔记本</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -66,7 +66,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">品牌机</a>
+                        <a href="./topic/p_1.html">品牌机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -93,7 +93,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">一体机</a>
+                        <a href="./topic/p_1.html">一体机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -128,7 +128,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">定制机</a>
+                        <a href="./topic/p_1.html">定制机</a>
                         <div class="tab-item hidden">
                             <ul>
 
@@ -152,7 +152,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">显示器</a>
+                        <a href="./topic/p_1.html">显示器</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -179,7 +179,8 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">外设类目</a>
+                        <a href="./topic/p_1.html
+                        ">外设类目</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -204,26 +205,27 @@
     <div class="main-content w">
 
         <!-- <img src="../uploads/banner1.png" alt=""> -->
-
-        <div class="sideNav noneBar ">
-            <ul>
-                <li class="sideNav_active"><a href="./topic/c_1.html">操作系统</a></li>
-                <li><a href="./topic/c_2.html">BIOS设置</a></li>
-                <li><a href="./topic/c_3.html">安装视频</a></li>
-                <li><a href="./topic/c_4.html">驱动程序</a></li>
-                <li><a href="./topic/c_5.html">网络故障</a></li>
-                <li><a href="./topic/c_6.html">显示故障</a></li>
-                <li><a href="./topic/c_7.html">第三方软件</a></li>
-                <li><a href="./topic/c_8.html">游戏影音</a></li>
-                <li><a href="./topic/c_9.html">显示设置</a></li>
-                <li><a href="./topic/c_10.html">一键恢复</a></li>
-                <li><a href="./topic/c_11.html">设备应用</a></li>
-            </ul>
+        <div id="sideNavContainer" id="sideNavContainer">
+            <div class="sideNav  ">
+                <ul>
+                    <li class="sideNav_active"><a href="./topic/c_1.html">操作系统</a></li>
+                    <li><a href="./topic/c_2.html">BIOS设置</a></li>
+                    <li><a href="./topic/c_3.html">安装视频</a></li>
+                    <li><a href="./topic/c_4.html">驱动程序</a></li>
+                    <li><a href="./topic/c_5.html">网络故障</a></li>
+                    <li><a href="./topic/c_6.html">显示故障</a></li>
+                    <li><a href="./topic/c_7.html">第三方软件</a></li>
+                    <li><a href="./topic/c_8.html">游戏影音</a></li>
+                    <li><a href="./topic/c_9.html">显示设置</a></li>
+                    <li><a href="./topic/c_10.html">一键恢复</a></li>
+                    <li><a href="./topic/c_11.html">设备应用</a></li>
+                </ul>
+            </div>
+            <div class="sideNav_more iconfont icon-xiajiantou
+            ">
+            </div>
         </div>
-        <div class="sideNav_more iconfont icon-xiajiantou
-        ">
-        </div>
-        <div class="banner">
+        <div class="banner" id='banner'>
             <div class="jcarousel">
                 <ul>
                     <li>
@@ -319,9 +321,9 @@
                     <a href="./list/list.html">查看更多</a>
                 </div>
             </div>
-            <div class="fr adList">
+            <div class="fr adList" id='adList'>
                 <ul>
-                    <li><a href="javascript:;"><img src="../uploads/ad1.png" alt=""></a></li>
+                    <li><a href="./topic/p_1.html"><img src="../uploads/ad1.png" alt=""></a></li>
                     <li><a href="javascript:;"><img src="../uploads/ad1.png" alt=""></a></li>
                     <li><a href="javascript:;"><img src="../uploads/ad1.png" alt=""></a></li>
                 </ul>
@@ -330,7 +332,8 @@
 
 
     </div>
-    <div class="footer">
+
+    <div class="footer" id="footer">
         <div class="w">
             <div class="footer-top clearfix">
                 <div class="footer-logo fl">
@@ -350,7 +353,6 @@
     </div>
 </body>
 <script src="../assets/lib/jquery/jquery.js"></script>
-
 <script src="../assets/lib/jquery.jcarousel/jquery.jcarousel.min.js"></script>
 <script src="../assets/js/util.js"></script>
 <script>
