--- a/src/topic/c_2.html
+++ b/src/topic/c_2.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="攀升,攀升电脑，攀升（IPASON），攀升兄弟,武极,VTG,IPASON,VGAME，电脑,组装电脑,台式机,台式电脑,电脑主机，一体机，外设数码，电竞装备">
     <meta name="description" content="攀升（IPASON）电脑成立于2013年，公司主营专业电竞装备、高性能电脑、一体式电脑及周边外设，以天猫、京东、亚马逊、阿里国际、Lazada等电商平台为主要销售渠道。作为行业首家拥有自主知识产权的国家高新技术企业，现已获60余项专利技术，自主研发的高性能电脑深得广大年轻消费者的青睐。现已在菲律宾、印度等国家设立分公司，产品远销27个国家。">
     <title>攀升知识库-电脑各设备的驱动程序问题-攀升知识库</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/util.css">
     <link rel="stylesheet" href="../../assets/fonts/iconfont.css">
@@ -32,7 +32,7 @@
                     <li class="line"></li>
                     <li>
 
-                        <a href="javascript:;">笔记本</a>
+                        <a href="../topic/p_1.html">笔记本</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -59,7 +59,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">品牌机</a>
+                        <a href="../topic/p_1.html">品牌机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -86,7 +86,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">一体机</a>
+                        <a href="../topic/p_1.html">一体机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -121,7 +121,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">定制机</a>
+                        <a href="../topic/p_1.html">定制机</a>
                         <div class="tab-item hidden">
                             <ul>
 
@@ -145,7 +145,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">显示器</a>
+                        <a href="../topic/p_1.html">显示器</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -172,7 +172,7 @@
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">外设类目</a>
+                        <a href="../topic/p_1.html">外设类目</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
@@ -215,6 +215,108 @@
          
         </ul>
 
+    </div>
+    <div class="list-content">
+        <div class="w clearfix">
+            <div class="fl topWrapper" id="tplWrapper">
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <div class="topList clearfix">
+                    <div class="imagesPotion">
+                        <a href="../detail/dc_1.html" target="_blank">
+                            <img src="../../uploads/list1.png" alt="">
+                        </a>
+                    </div>
+                    <div class="topcontent">
+                        <h5 class="title">
+                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                        </h5>
+                        <p>这是文章内容呀</p>
+                    </div>
+                </div>
+                <!-- <div class="readyMore topList">
+                    <a href="./list/list.html">查看更多</a>
+                </div> -->
+            </div>
+            <div class="fr adList">
+                <ul>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                </ul>
+            </div>
+            
+        </div>
+
+
+    </div>
+    <div class="footer">
+        <div class="w">
+            <div class="footer-top clearfix">
+                <div class="footer-logo fl">
+                    <a href="#"></a>
+                </div>
+                <div class="footer-share fr">
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>
+                    Copyright © 2008 - 2019 攀升ipason.com版权所有
+                    武汉攀升鼎承科技有限公司 WUHAN IPASON TECHNOLOGY CO., LTD 鄂ICP备15016139号"
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 <script src="../../assets/lib/jquery/jquery.js"></script>
