--- a/src/detail/dc_1.html
+++ b/src/detail/dc_1.html
@@ -3,14 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="攀升,攀升电脑，攀升（IPASON），攀升兄弟,武极,VTG,IPASON,VGAME，电脑,组装电脑,台式机,台式电脑,电脑主机，一体机，外设数码，电竞装备">
+    <meta name="description"
+        content="攀升（IPASON）电脑成立于2013年，公司主营专业电竞装备、高性能电脑、一体式电脑及周边外设，以天猫、京东、亚马逊、阿里国际、Lazada等电商平台为主要销售渠道。作为行业首家拥有自主知识产权的国家高新技术企业，现已获60余项专利技术，自主研发的高性能电脑深得广大年轻消费者的青睐。现已在菲律宾、印度等国家设立分公司，产品远销27个国家。">
+    <title>攀升知识库-电脑各设备的驱动程序问题-攀升知识库</title>
+  
     <link rel="stylesheet" href="../../assets/css/base.css">
     <link rel="stylesheet" href="../../assets/css/util.css">
+    <link rel="stylesheet" href="../../assets/fonts/iconfont.css">
     <link rel="stylesheet" href="../../assets/lib/jquery.jcarousel/jcarousel.basic.css">
     <link rel="stylesheet" href="./article.css">
 
-  
-    <title>Document</title>
 </head>
 <body>
     <div class="top-nav">
@@ -26,164 +31,164 @@
             <div class="tab-card">
                 <ul class="tab-title clearfix">
                     <li class="tab-active">
-                        <a href="javascript:;">首页</a>
+                        <a href="../index.html">首页</a>
                     </li>
                     <li class="line"></li>
                     <li>
 
-                        <a href="javascript:;">笔记本</a>
+                        <a href="../topic/p_1.html">笔记本</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
                                     <span class="tab-item-title">H系列</span>
-                                    <a href="#"><span class="tab-item-name">HR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">HR272</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">品牌机</a>
+                        <a href="../topic/p_1.html">品牌机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
                                     <span class="tab-item-title">H系列</span>
-                                    <a href="#"><span class="tab-item-name">HR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">HR272</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">一体机</a>
+                        <a href="../topic/p_1.html">一体机</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
                                     <span class="tab-item-title">H系列</span>
-                                    <a href="#"><span class="tab-item-name">HR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">HR272</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">定制机</a>
+                        <a href="../topic/p_1.html">定制机</a>
                         <div class="tab-item hidden">
                             <ul>
 
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">显示器</a>
+                        <a href="../topic/p_1.html">显示器</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
                                     <span class="tab-item-title">H系列</span>
-                                    <a href="#"><span class="tab-item-name">HR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">HR272</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">G系列</span>
-                                    <a href="#"><span class="tab-item-name">G2401</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272</span></a>
-                                    <a href="#"><span class="tab-item-name">GR273</span></a>
-                                    <a href="#"><span class="tab-item-name">GR272Q</span></a>
-                                    <a href="#"><span class="tab-item-name">QR302W</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">G2401</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR273</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">GR272Q</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">QR302W</span></a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li class="line"></li>
                     <li>
-                        <a href="javascript:;">外设类目</a>
+                        <a href="../topic/p_1.html">外设类目</a>
                         <div class="tab-item hidden">
                             <ul>
                                 <li>
                                     <span class="tab-item-title">H系列</span>
-                                    <a href="#"><span class="tab-item-name">HR272</span></a>
+                                    <a href="./lsit/list.html"><span class="tab-item-name">HR272</span></a>
                                 </li>
                                 <li>
                                     <span class="tab-item-title">E系列</span>
-                                    <a href="#"><span class="tab-item-name">E281UA</span></a>
-                                    <a href="#"><span class="tab-item-name">E2201</span></a>
-                                    <a href="#"><span class="tab-item-name">E241</span></a>
-                                    <a href="#"><span class="tab-item-name">E241L</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E281UA</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E2201</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241</span></a>
+                                    <a href="../list/list.html"><span class="tab-item-name">E241L</span></a>
                                 </li>
 
                             </ul>
