--- a/src/detail/dc_1.html
+++ b/src/detail/dc_1.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../../assets/fonts/iconfont.css">
     <link rel="stylesheet" href="../../assets/lib/jquery.jcarousel/jcarousel.basic.css">
     <link rel="stylesheet" href="./article.css">
-
+    
 </head>
 <body>
     <div class="top-nav">
@@ -202,9 +202,9 @@
         <div class="breadcrumb article-bread">
             <ul>
                 <li><a href="../index/index.html">所有分类</a></li>
-                <li><a href="#">操作系统</a></li>
-                <li> <a href="#">系统登录异常</a></li>
-                <li> <a href="#">这是文章标题</a></li>
+                <li><a href="../index/index.html">操作系统</a></li>
+                <li> <a href="../index/index.html">系统登录异常</a></li>
+                <li> <a href="../index/index.html">这是文章标题</a></li>
             </ul>
         </div>
     </div>
