topic侧边导航栏的添加

--- a/src/list/list.html
+++ b/src/list/list.html
@@ -286,6 +286,9 @@
                     <p>这是文章内容呀</p>
                 </div>
             </div>
+            <div class="readyMore topList">
+                <a href="javascript:;">查看更多</a>
+            </div>
         </div>
         <div class="fr adList">
             <ul>
