--- a/src/topic/p_1.html
+++ b/src/topic/p_1.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="../../assets/css/util.css">
     <link rel="stylesheet" href="../../assets/fonts/iconfont.css">
     <link rel="stylesheet" href="./topic.css">
+
 </head>
+
 <body>
     <div class="top-nav">
         <div class="w">
@@ -196,156 +198,186 @@
             </div>
         </div>
     </div>
-    <div class="allFristTypeWrapper w">
-        <p class="allFristType">
-            <a href="/">
-                <span class="type">所有分类</span>
-            </a>
-            <span> &gt; </span>
-            <a href="#" id="oneNavStep">
-                <span id="productionName">操作系统</span>
-            </a>
-        </p>
-        <input type="hidden" id="secondeType" value="c">
-        <ul class="typeContent clearfix" id="typeTplWrapper">
-            <li>
-                <a href="../list/list.html">系统登录异常</a>
-            </li>
-            <li>
-                <a href="../list/list.html">开关机问题</a>
-            </li>
-            <li>
-                <a href="../list/list.html">系统数据恢复</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">用户账户</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">注册表操作</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">输入法问题</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">垃圾清理</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">系统还原</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">浏览器问题</a>
-            </li>
-
-            <li>
-                <a href="../list/list.html">系统升级与安装</a>
-            </li>
-            <li>
-                <a href="../list/list.html">死机蓝屏</a>
-            </li>
-            <li>
-                <a href="../list/list.html">磁盘分区</a>
-            </li>
-        </ul>
-    </div>
     <div class="list-content">
         <div class="w clearfix">
-            <div class="fl topWrapper" id="tplWrapper">
-                <div class="topList clearfix">
-                    <div class="imagesPotion">
-                        <a href="../detail/dc_1.html" target="_blank">
-                            <img src="../../uploads/list1.png" alt="">
+            <div class='topic_content fl'>
+                <div class="allFristTypeWrapper w">
+                    <p class="allFristType">
+                        <a href="/">
+                            <span class="type">所有分类</span>
                         </a>
-                    </div>
-                    <div class="topcontent">
-                        <h5 class="title">
-                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
-                        </h5>
-                        <p>这是文章内容呀</p>
-                    </div>
-                </div>
-                <div class="topList clearfix">
-                    <div class="imagesPotion">
-                        <a href="../detail/dc_1.html" target="_blank">
-                            <img src="../../uploads/list1.png" alt="">
+                        <span> &gt; </span>
+                        <a href="#" id="oneNavStep">
+                            <span id="productionName">显示器</span>
                         </a>
-                    </div>
-                    <div class="topcontent">
-                        <h5 class="title">
-                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
-                        </h5>
-                        <p>这是文章内容呀</p>
-                    </div>
-                </div>
-                <div class="topList clearfix">
-                    <div class="imagesPotion">
-                        <a href="../detail/dc_1.html" target="_blank">
-                            <img src="../../uploads/list1.png" alt="">
-                        </a>
-                    </div>
-                    <div class="topcontent">
-                        <h5 class="title">
-                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
-                        </h5>
-                        <p>这是文章内容呀</p>
-                    </div>
-                </div>
-                <div class="topList clearfix">
-                    <div class="imagesPotion">
-                        <a href="../detail/dc_1.html" target="_blank">
-                            <img src="../../uploads/list1.png" alt="">
-                        </a>
-                    </div>
-                    <div class="topcontent">
-                        <h5 class="title">
-                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
-                        </h5>
-                        <p>这是文章内容呀</p>
-                    </div>
-                </div>
-                <div class="topList clearfix">
-                    <div class="imagesPotion">
-                        <a href="../detail/dc_1.html" target="_blank">
-                            <img src="../../uploads/list1.png" alt="">
-                        </a>
-                    </div>
-                    <div class="topcontent">
-                        <h5 class="title">
-                            <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
-                        </h5>
-                        <p>这是文章内容呀</p>
-                    </div>
-                </div>
-                <!-- <div class="readyMore topList">
-                    <a href="./list/list.html">查看更多</a>
-                </div> -->
-            </div>
-            <div class="fr adList">
-                <ul>
-                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
-                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
-                    <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
-                </ul>
-            </div>
+                    </p>
+                    <input type="hidden" id="secondeType" value="c">
+                    <ul class="typeContent clearfix" id="typeTplWrapper">
+                        <li>
+                            <a href="../list/list.html">HR272</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">E281UA</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">E2201</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">E241</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">E241L</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">G2401</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">GR272</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">GR273</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">GR272Q</a>
+                        </li>
+                        <li>
+                            <a href="../list/list.html">QR302W</a>
+                        </li>
+                    </ul>
             
+                </div>
+                <div class="topWrapper clearfix" id="tplWrapper">
+                    <div class="topList clearfix">
+                        <div class="imagesPotion">
+                            <a href="../detail/dc_1.html" target="_blank">
+                                <img src="../../uploads/list1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="topcontent">
+                            <h5 class="title">
+                                <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                            </h5>
+                            <p>这是文章内容呀</p>
+                        </div>
+                    </div>
+                    <div class="topList clearfix">
+                        <div class="imagesPotion">
+                            <a href="../detail/dc_1.html" target="_blank">
+                                <img src="../../uploads/list1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="topcontent">
+                            <h5 class="title">
+                                <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                            </h5>
+                            <p>这是文章内容呀</p>
+                        </div>
+                    </div>
+                    <div class="topList clearfix">
+                        <div class="imagesPotion">
+                            <a href="../detail/dc_1.html" target="_blank">
+                                <img src="../../uploads/list1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="topcontent">
+                            <h5 class="title">
+                                <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                            </h5>
+                            <p>这是文章内容呀</p>
+                        </div>
+                    </div>
+                    <div class="topList clearfix">
+                        <div class="imagesPotion">
+                            <a href="../detail/dc_1.html" target="_blank">
+                                <img src="../../uploads/list1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="topcontent">
+                            <h5 class="title">
+                                <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                            </h5>
+                            <p>这是文章内容呀</p>
+                        </div>
+                    </div>
+                    <div class="topList clearfix">
+                        <div class="imagesPotion">
+                            <a href="../detail/dc_1.html" target="_blank">
+                                <img src="../../uploads/list1.png" alt="">
+                            </a>
+                        </div>
+                        <div class="topcontent">
+                            <h5 class="title">
+                                <a href="../detail/dc_1.html" target="_blank">标题标题标题标题标题标题标题标题</a>
+                            </h5>
+                            <p>这是文章内容呀</p>
+                        </div>
+                    </div>
+                    <div class="readyMore topList">
+                        <a href="javascript:;">查看更多</a>
+                    </div>
+                    <!-- <div class="readyMore topList">
+                        <a href="./list/list.html">查看更多</a>
+                    </div> -->
+                </div>
+            </div>
+            <div class="topic_ad fr">
+                <div class="rightBarWrapper">
+                    <div class="barBox " id="knowledgeBox">
+                        <h3 class="box-title">知识专区</h3>
+                        <ul class="knowledge clearfix">
+
+                            <li class="default"><a href="./c_1.html">操作系统</a></li>
+
+                            <li class="orange"><a href="./c_2.html">BIOS设置</a></li>
+
+                            <li class="pink"><a href="./c_3.html">安装视频</a></li>
+
+                            <li class="red"><a href="./c_4.html">驱动程序</a></li>
+
+                            <li class="blue"><a href="./c_5.html">网络故障</a></li>
+
+                            <li class="green"><a href="./c_6.html">显示故障</a></li>
+
+                            <li class="black"><a href="./c_8.html">游戏影音</a></li>
+
+                            <li class="default"><a href="./c_9.html">显示设置</a></li>
+
+                            <li class="orange"><a href="./c_10.html">一键恢复</a></li>
+
+                            <li class="gray"><a href="./c_7.html">第三方软件</a></li>
+
+                            <li class="pink"><a href="./c_11.html">设备应用</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="adList">
+                    <ul>
+                        <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                        <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                        <li><a href="javascript:;"><img src="../../uploads/ad1.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+
+
         </div>
-
-
     </div>
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="w">
             <div class="footer-top clearfix">
                 <div class="footer-logo fl">
-                    <a href="#"></a>
+                    <a href="./list/list.html"></a>
                 </div>
                 <div class="footer-share fr">
-                    <a href="#"></a>
+                    <span class="wx"><a href="#" target="_blank"></a></span>
+                    <span class="weibo"><a
+                            href="https://weibo.com/p/1006061747265162/home?from=page_100606&amp;mod=TAB&amp;is_all=1&amp;sudaref=www.baidu.com&amp;display=0&amp;retcode=6102"
+                            target="_blank"></a></span>
+                    <span class="tieba"><a
+                            href="http://tieba.baidu.com/f?ie=utf-8&amp;kw=%E6%94%80%E5%8D%87%E5%85%84%E5%BC%9F&amp;red_tag=k2456869485"
+                            target="_blank"></a></span>
                 </div>
+
             </div>
             <div class="footer-bottom">
                 <p>
@@ -353,20 +385,18 @@
                     武汉攀升鼎承科技有限公司 WUHAN IPASON TECHNOLOGY CO., LTD 鄂ICP备15016139号"
                 </p>
             </div>
+
         </div>
     </div>
 </body>
 <script src="../../assets/lib/jquery/jquery.js"></script>
 <script src="../../assets/js/util.js"></script>
-
 <script>
 
     $(function () {
         Util.topDrop()
-      
-
     })
-   
+
         // var baseUrl = location.origin + '/src'
         // console.log(baseUrl)
         // var a = 'http://127.0.0.1:5500/src' + '/list/list.html'
